added function to stream file to gcp

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ micronaut:
   object-storage:
     gcp:
       default:
-        bucket: ${GCP_BUCKET_NAME:}
+        bucket: ${GCP_BUCKET_NAME:hm-grunndata-media}
   application:
     name: hm-grunndata-media
     thread-selection: auto
