--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,3 +76,6 @@ gcp:
   project-id:
   credentials:
     location: ${GCP_CREDENTIALS_LOCATION:/path/to/credential}
+media:
+  storage:
+    enabled: ${MEDIA_STORAGE_ENABLED:false}
