--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,3 +79,6 @@ gcp:
 media:
   storage:
     enabled: ${MEDIA_STORAGE_ENABLED:false}
+  source:
+    hmdb:
+      url: ${MEDIA_SOURCE_HMDB_URL:`https://www.hjelpemiddeldatabasen.no/blobs/orig`}
