--- a/.nais/nais.yml
+++ b/.nais/nais.yml
@@ -34,11 +34,11 @@ spec:
     - name: DB_JDBC_URL
       value: "jdbc:postgresql://${DB_HOST}:5432/media"
     - name: RAPIDSANDRIVERS_ENABLED
-      value: {{rapidsandrivers_enabled}}
+      value: "{{ rapidsandrivers_enabled }}"
     - name: GCP_BUCKET_NAME
       value: "{{ bucket_name }}"
     - name: MEDIA_STORAGE_ENABLED
-      value: {{media_storage_enabled}}
+      value: "{{ media_storage_enabled }}"
   gcp:
     sqlInstances:
       - name: hm-grunndata-media
