--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,7 +83,7 @@ media:
   storage:
     enabled: ${MEDIA_STORAGE_ENABLED:false}
     retention: ${MEDIA_STORAGE_RETENTION:90d}
-    cdnurl: ${MEDIA_STORAGE_CDNURL:https://cdn.dev.nav.no/teamdigihot/grunndata/media/v1}
+    cdnurl: ${MEDIA_STORAGE_CDNURL:`http://localhost:8080/teamdigihot/grunndata/media/v1`}
 
 schedulers:
   enabled: ${SCHEDULERS_ENABLED:false}
