--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 micronaut:
   server:
     multipart:
-      max-file-size: 10097152
+      max-file-size: 10000000
     port: ${SERVER_PORT:8080}
+    max-request-size: 10000000
   object-storage:
     gcp:
       default:
