--- a/.nais/nais.yml
+++ b/.nais/nais.yml
@@ -3,6 +3,8 @@ kind: "Application"
 metadata:
   name: hm-grunndata-media
   namespace: teamdigihot
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
   labels:
     team: teamdigihot
 spec:
