--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -10,6 +10,11 @@ on:
       - main
 jobs:
   call-workflow:
+    permissions:
+      contents: write
+      id-token: write
+      security-events: write
+      actions: read
     uses: navikt/pam-deploy/.github/workflows/deploy-dev.yml@v4
     with:
       NAIS_RESOURCE: ".nais/nais.yml"
