--- a/.nais/nais.yml
+++ b/.nais/nais.yml
@@ -63,7 +63,7 @@ spec:
         highAvailability: true
         diskSize: {{disk_size}}
         diskAutoresize: true
-        autoBackupTime: "03:00"
+        autoBackupHour: 3
         databases:
           - name: media
             envVarPrefix: DB
