--- a/.nais/nais.yml
+++ b/.nais/nais.yml
@@ -50,7 +50,7 @@ spec:
       value: "/var/run/secrets/credentials/hm-grunndata-media/secret"
     - name: MEDIA_STORAGE_CDNURL
       value: "{{ media_storage_cdnurl }}"
-    - name: JAVA_OPTS
+    - name: JDK_JAVA_OPTIONS
       value: "{{java_opts}}"
     - name: MEDIA_STORAGE_RETENTION
       value: "{{ media_storage_retention }}"
